--- a/frontend/01_start.html
+++ b/frontend/01_start.html
@@ -1,3 +1,23 @@
 <!-- --------------------------------- -->
 <!--       Add shape, move shape       -->
 <!-- --------------------------------- -->
+
+<div id="circle" style="
+    z-index: 1;
+    position: absolute;
+    left: 100px;
+    top: 200px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    blackground: black;
+"></div>
+
+<button onclick="moveCircle()">Move</button>
+
+<script>
+    var circle = document.getElementById('circle');
+    var x = 100;
+    var y = 200;
+    
+</script>
