--- a/working_with_data/02_overx/overx.html
+++ b/working_with_data/02_overx/overx.html
@@ -12,8 +12,13 @@
 <div id="output"></div>
 
 <script> 
+var salaries = data.data;
+var salary = 0;
 
 var count = function(){
+	salary = Number(document.getElementById('salary').value);
+	var filtered = salaries.filter((item) => (item[18]>salary));
+	console.log(filtered.length);
 	// ------------------------
 	//		YOUR CODE
 	//   Count the number of jobs
@@ -24,6 +29,10 @@ var count = function(){
 	//	 the output div.
 	// ------------------------
 };
+
+function overx(item){
+	return item[18]>salary
+}
 
 </script>
 </html>
